# wgs

./: .gitignore  .gitmod  Makefile.am  Tuprules.tup  configure.ac
src/AS_ALN/: AS_ALN_aligners.h  AS_ALN_bruteforcedp.C  AS_ALN_bruteforcedp.h  AS_ALN_dpaligner.C  AS_ALN_dpaligner.c  AS_ALN_forcns.c  AS_ALN_loverlapper.C  AS_ALN_loverlapper.c  AS_ALN_pieceOlap.C  AS_ALN_qvaligner.C  AS_ALN_qvaligner.c  CA_ALN_local.C  CA_ALN_local.c  CA_ALN_local.h  CA_ALN_overlap.C  CA_ALN_scafcomp.C  CA_ALN_scafcomp.h  Makefile.am  libraries.tup
src/AS_ARD/: AS_ARD_database.cc  AS_ARD_database.hh  BCPOutput.cc  BCPOutput.hh  DBTextOutput.cc  DBTextOutput.hh  IAssemblyDB.hh  IDBConnection.hh  IDBOutput.hh  Makefile.am  SQLOutput.cc  SQLOutput.hh  Sybase.cc  Sybase.hh  binaries.tup  getAssembly.cc  loadAssembly.cc
src/AS_BOG/: AS_BOG_BestOverlapGraph.cc  AS_BOG_BestOverlapGraph.hh  AS_BOG_ChunkGraph.cc  AS_BOG_ChunkGraph.hh  AS_BOG_Datatypes.hh  AS_BOG_MateChecker.cc  AS_BOG_MateChecker.hh  AS_BOG_Unitig.cc  AS_BOG_Unitig.hh  AS_BOG_UnitigGraph.cc  AS_BOG_UnitigGraph.hh  BuildUnitigs.cc  Makefile.am  Tupfile  binaries.tup  fixUnitigs.C  scoreOverlaps.C
src/AS_CGB/: AS_CGB_Bubble.C  AS_CGB_Bubble.c  AS_CGB_Bubble.h  AS_CGB_Bubble_Graph.C  AS_CGB_Bubble_Graph.c  AS_CGB_Bubble_Graph.h  AS_CGB_Bubble_Popper.C  AS_CGB_Bubble_Popper.h  AS_CGB_Bubble_PopperMethods.C  AS_CGB_Bubble_PopperMethods.h  AS_CGB_Bubble_VertexSet.C  AS_CGB_Bubble_VertexSet.c  AS_CGB_Bubble_VertexSet.h  AS_CGB_Bubble_dfs.C  AS_CGB_Bubble_dfs.c  AS_CGB_all.h  AS_CGB_cga.C  AS_CGB_cga.c  AS_CGB_cgb.C  AS_CGB_chimeras.C  AS_CGB_classify.C  AS_CGB_classify.c  AS_CGB_edgemate.C  AS_CGB_fga.C  AS_CGB_fgb.C  AS_CGB_fgb.c  AS_CGB_histo.C  AS_CGB_histo.c  AS_CGB_histo.h  AS_CGB_main.C  AS_CGB_methods.h  AS_CGB_traversal.C  AS_CGB_unitigger.C  AS_CGB_unitigger_globals.h  AS_CGB_walk.C  AS_FGB_contained.C  AS_FGB_contained.c  AS_FGB_hanging_fragment.C  AS_FGB_hanging_fragment.c  AS_FGB_io.C  (+5 more)
src/AS_CGW/: AS_CGW_EdgeDiagnostics.C  AS_CGW_EdgeDiagnostics.c  AS_CGW_EdgeDiagnostics.h  AS_CGW_dataTypes.h  AS_CGW_histo.c  AS_CGW_histo.h  AS_CGW_main.C  AS_CGW_main.c  CIEdgeT_CGW.C  CIScaffoldT_Biconnected_CGW.C  CIScaffoldT_CGW.C  CIScaffoldT_CGW.c  CIScaffoldT_Cleanup_CGW.C  CIScaffoldT_Cleanup_CGW.c  CIScaffoldT_Merge_CGW.C  CIScaffoldT_Merge_CGW.c  CIScaffoldT_Merge_CGW.h  Celamy_CGW.C  Celamy_CGW.c  ChiSquareTest_CGW.h  ChunkOverlap_CGW.C  ChunkOverlap_CGW.c  ContigT_CGW.C  ContigT_CGW.c  DemoteUnitigsWithRBP_CGW.C  Globals_CGW.C  Globals_CGW.h  GraphCGW_T.C  GraphCGW_T.c  GraphCGW_T.h  InputDataTypes_CGW.h  Input_CGW.C  Input_CGW.c  Input_CGW.h  Instrument_CGW.C  Instrument_CGW.c  Instrument_CGW.h  InterleavedMerging.C  InterleavedMerging.c  InterleavedMerging.h  (+37 more)
src/AS_CNS/: AbacusRefine.C  AbacusRefine.c  ApplyAlignment.C  ApplyAlignment.c  Array_CNS.C  Array_CNS.c  Array_CNS.h  BaseCall.C  BaseCall.c  GetAlignmentTrace.C  GetAlignmentTrace.c  Makefile.am  MergeMultiAligns.C  MergeMultiAligns.c  MergeRefine.C  MultiAlign.C  MultiAlign.c  MultiAlign.h  MultiAlignContig.C  MultiAlignPrint.C  MultiAlignPrint.c  MultiAlignStore.C  MultiAlignStore.h  MultiAlignUnitig.C  MultiAlignUnitig.c  MultiAlignment_CNS.C  MultiAlignment_CNS.h  MultiAlignment_CNS_private.h  PrintAlignment.C  RefreshMANode.C  ReplaceEndUnitigInContig.C  SeqAn_CNS.c  binaries.tup  ctgcns.C  libraries.tup  tigStore.C  utgcns.C
src/AS_ENV/: Makefile.am  Tupfile  binaries.tup  chimChe.C  greedyFragmentTiling.C  kmer_utils.h  metagenomics_ovl_analyses.c
src/AS_GKP/: AS_GKP_bench.c  AS_GKP_buildPartition.c  AS_GKP_checkFrag.c  AS_GKP_checkLibrary.c  AS_GKP_checkLink.C  AS_GKP_checkPlace.C  AS_GKP_dump.C  AS_GKP_dump.c  AS_GKP_edit.C  AS_GKP_errors.C  AS_GKP_illumina.C  AS_GKP_include.h  AS_GKP_main.C  AS_GKP_main.c  Makefile.am  binaries.tup  fastqSample.C  fastqToCA.C  sffToCA.C  sffToCA.c
src/AS_MSG/: AS_MSG_pmesg.C  AS_MSG_pmesg.c  AS_MSG_pmesg.h  AS_MSG_pmesg1.C  AS_MSG_pmesg2.C  AS_MSG_pmesg_internal.h  AS_MSG_types.h  ExtractMessages.C  ExtractMessages.c  Makefile.am  binaries.tup  libraries.tup  remove_fragment.c
src/AS_OBT/: AS_OBT_acceptableOverlap.C  AS_OBT_acceptableOverlap.c  AS_OBT_acceptableOverlap.h  Makefile.am  binaries.tup  chimera.C  consolidate.C  deduplicate.C  initialTrim.C  libraries.tup  merge-trimming.C  overlapMask.C  readOverlap.C  removeMateOverlap.C  trim.C  util++.C
src/AS_OVL/: AS_OVL_delcher.C  AS_OVL_delcher.c  AS_OVL_delcher.h  AS_OVL_driver.C  AS_OVL_driver_ca.C  AS_OVL_driver_common.h  AS_OVL_olapstats.h  AS_OVL_overlap.C  AS_OVL_overlap.h  AS_OVL_overlap_ca.C  AS_OVL_overlap_ca.c  AS_OVL_overlap_common.h  CatCorrectsOVL.C  CatCorrectsOVL.c  CatEratesOVL.C  CatEratesOVL.c  CorrectOlapsOVL.C  FragCorrectOVL.C  FragCorrectOVL.c  FragCorrectOVL.h  Makefile  Makefile.am  OlapFromSeedsOVL.C  OlapFromSeedsOVL.h  SharedOVL.C  SharedOVL.c  SharedOVL.h  ShowCorrectsOVL.C  Tupfile  binaries.tup  libraries.tup
src/AS_OVS/: AS_OVS_overlap.C  AS_OVS_overlap.c  AS_OVS_overlap.h  AS_OVS_overlapFile.C  AS_OVS_overlapFile.c  AS_OVS_overlapFile.h  AS_OVS_overlapStore.C  AS_OVS_overlapStore.c  AS_OVS_overlapStore.h  AS_UTL_histogram.h  Makefile.am  binaries.tup  convertOverlap.c  filterOverlap.C  filterOverlap.c  libraries.tup  overlapStats.C  overlapStatsBoringStuff.h  overlapStore.C  overlapStore.c  overlapStore.h  overlapStore_build.C  overlapStore_build.c  overlapStore_dump.C  overlapStore_dump.c  overlapStore_erates.C  overlapStore_merge.C
src/AS_PER/: AS_PER_asmStore.C  AS_PER_asmStore.c  AS_PER_asmStore.h  AS_PER_encodeSequenceQuality.C  AS_PER_encodeSequenceQuality.h  AS_PER_genericStore.C  AS_PER_genericStore.c  AS_PER_genericStore.h  AS_PER_gkLibrary.C  AS_PER_gkStore.C  AS_PER_gkStore_IID.C  AS_PER_gkStore_PLC.C  AS_PER_gkStore_UID.C  AS_PER_gkStore_clearRange.C  AS_PER_gkStore_fragments.C  AS_PER_gkStore_load.C  AS_PER_gkStore_partition.C  AS_PER_gkStream.C  AS_PER_gkpStore.h  Makefile.am  libraries.tup
src/AS_REZ/: CommonREZ.h  ConsistencyChecksREZ.C  ConsistencyChecksREZ.h  DataTypesREZ.h  GapFillREZ.C  GapWalkerREZ.C  UtilsREZ.C  (+15 more)
(+232 files in other folders)
