bin_PROGRAMS += bin/buildUnitigs bin/fixUnitigs bin/scoreOverlaps

bin_buildUnitigs_SOURCES = %D%/BuildUnitigs.cc				\
%D%/AS_BOG_BestOverlapGraph.cc %D%/AS_BOG_ChunkGraph.cc			\
%D%/AS_BOG_MateChecker.cc %D%/AS_BOG_Unitig.cc %D%/AS_BOG_UnitigGraph.cc
bin_fixUnitigs_SOURCES = %D%/fixUnitigs.C
bin_scoreOverlaps_SOURCES = %D%/scoreOverlaps.C

noinst_HEADERS += %D%/AS_BOG_BestOverlapGraph.hh	\
%D%/AS_BOG_ChunkGraph.hh %D%/AS_BOG_Datatypes.hh	\
%D%/AS_BOG_MateChecker.hh %D%/AS_BOG_UnitigGraph.hh	\
%D%/AS_BOG_Unitig.hh
