bin_PROGRAMS += bin/greedyFragmentTiling			\
                bin/metagenomics_ovl_analyses bin/chimChe

bin_greedyFragmentTiling_SOURCES = %D%/greedyFragmentTiling.C
bin_metagenomics_ovl_analyses_SOURCES = %D%/metagenomics_ovl_analyses.C
bin_chimChe_SOURCES = %D%/chimChe.C

dist_bin_SCRIPTS += %D%/greedy_layout_to_IUM %D%/utg2fasta	\
%D%/run_greedy.csh

noinst_HEADERS += %D%/kmer_utils.h
