noinst_LIBRARIES += lib/libAS_REZ.a
lib_libAS_REZ_a_SOURCES = %D%/ConsistencyChecksREZ.C %D%/GapFillREZ.C	\
                          %D%/GapWalkerREZ.C %D%/StatisticsREZ.C	\
                          %D%/UpdateREZ.C %D%/UtilsREZ.C		\
                          %D%/MicroHetREZ.C

libCA_a_SOURCES += $(lib_libAS_REZ_a_SOURCES)

noinst_HEADERS += %D%/CommonREZ.h %D%/ConsistencyChecksREZ.h	\
%D%/DataTypesREZ.h %D%/GapWalkerREZ.h %D%/MicroHetREZ.h		\
%D%/PartitionsREZ.h %D%/RepeatRez.h %D%/StatisticsREZ.h		\
%D%/SUBDELREZ.h %D%/UpdateREZ.h %D%/UtilsREZ.h
