bin_PROGRAMS += bin/terminator bin/asmOutputFasta			\
                bin/asmOutputStatistics bin/fragsInVars			\
                bin/buildPosMap

bin_terminator_SOURCES = %D%/terminator.C
bin_asmOutputFasta_SOURCES = %D%/asmOutputFasta.C
bin_asmOutputStatistics_SOURCES = %D%/asmOutputStatistics.C
bin_fragsInVars_SOURCES = %D%/fragsInVars.C
bin_buildPosMap_SOURCES = %D%/buildPosMap.C
