noinst_LIBRARIES += lib/libAS_UTL.a
lib_libAS_UTL_a_SOURCES = %D%/AS_UTL_Hash.C %D%/AS_UTL_heap.C	\
%D%/AS_UTL_Var.C %D%/AS_UTL_rand.C %D%/AS_UTL_interval.C	\
%D%/UnionFind_AS.C %D%/AS_UTL_skiplist.C %D%/AS_UTL_alloc.C	\
%D%/AS_UTL_fileIO.C %D%/AS_UTL_qsort_mt.C %D%/AS_UTL_fasta.C	\
%D%/AS_UTL_UID.C %D%/AS_UTL_reverseComplement.C

libCA_a_SOURCES += $(lib_libAS_UTL_a_SOURCES)

noinst_HEADERS += %D%/AS_UTL_alloc.h %D%/AS_UTL_fasta.h			\
%D%/AS_UTL_fileIO.h %D%/AS_UTL_GPL.h %D%/AS_UTL_Hash.h			\
%D%/AS_UTL_heap.h %D%/AS_UTL_histo.h %D%/AS_UTL_IID.h			\
%D%/AS_UTL_interval.h %D%/AS_UTL_param_proc.h %D%/AS_UTL_qsort_mt.h	\
%D%/AS_UTL_rand.h %D%/AS_UTL_reverseComplement.h			\
%D%/AS_UTL_skiplist.h %D%/AS_UTL_UID.h %D%/AS_UTL_Var.h			\
%D%/UnionFind_AS.h
